--- a/main.css
+++ b/main.css
@@ -70,3 +70,15 @@ input[type=search] {
   border-radius: 5%;
   transform: translateX(-50%) translateY(-50%);
 }
+
+.products {
+  width: 100%;
+  height: 200px;
+  float: left;
+}
+
+.products img {
+  width: 25%;
+  float: left;
+  object-fit: scale-down;
+}
