--- a/main.css
+++ b/main.css
@@ -2,6 +2,16 @@ body {
   font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
 }
 
+footer a:link,
+a:visited,
+a:active {
+  text-decoration: none;
+}
+
+footer a {
+  color: #08c;
+}
+
 .billboard {
   width: 100%;
   height: 670px;
@@ -26,7 +36,7 @@ nav {
   display: flex;
   float: left;
   width: 75%;
-  margin-top: -0px;
+  margin-top: -0;
 }
 
 .global-nav li {
@@ -117,7 +127,7 @@ footer {
   width: 100%;
   padding: 0;
   color: #6e6e6e;
-  font-size: .8334em;
+  font-size: 12px;
   line-height: 1.2;
 }
 
@@ -133,7 +143,9 @@ footer .left {
   padding-left: 180px;
 }
 
-footer p, footer ul, footer ul li {
+footer p,
+footer ul,
+footer ul li {
   display: inline-flex;
   margin: 0;
 }
@@ -143,14 +155,6 @@ footer .right {
   width: 50%;
   height: 70px;
   text-align: left;
-}
-
-footer a:link, a:visited, a:active {
-  text-decoration: none;
-}
-
-footer a {
-  color: #08c;
 }
 
 footer ul li {
