--- a/main.css
+++ b/main.css
@@ -2,14 +2,14 @@ body {
   font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
 }
 
-footer a:link,
-a:visited,
-a:active {
-  text-decoration: none;
-}
-
 footer a {
   color: #08c;
+}
+
+footer a:visited,
+a:active,
+a:link {
+  text-decoration: none;
 }
 
 .billboard {
@@ -37,6 +37,11 @@ nav {
   float: left;
   width: 75%;
   margin-top: -0;
+}
+
+footer ul li {
+  padding: 0 5px;
+  border-right: solid thin lightgrey;
 }
 
 .global-nav li {
@@ -139,10 +144,6 @@ footer .left {
   align-items: flex-end;
 }
 
-.left p {
-  padding-left: 180px;
-}
-
 footer p,
 footer ul,
 footer ul li {
@@ -150,16 +151,15 @@ footer ul li {
   margin: 0;
 }
 
+.left p {
+  padding-left: 180px;
+}
+
 footer .right {
   float: left;
   width: 50%;
   height: 70px;
   text-align: left;
-}
-
-footer ul li {
-  padding: 0 5px;
-  border-right: solid thin lightgrey;
 }
 
 footer .worldwide {
